k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infinarena
  labels:
    app.kubernetes.io/part-of: infinarena
